--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=mappings, info, app
 # DB properties
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_9b9612aa6f3350f?reconnect=true
 spring.datasource.username=ba52c9206074e7
-spring.datasource.password=f59ec48b
+spring.datasource.password=your_pass
 #JPA Config
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
